Name:		hdaemonize
Version:	0.1
Cabal-Version:  >= 1.2
License:	BSD3
Author:         Anton Tayanovskyy
Category:	System
Synopsis:       Utilities for UNIX daemon writing
Build-Type:	Simple
Library

  Build-Depends:	base, unix, directory, haskell98, hsyslog
  Exposed-modules:
    System.Posix.Daemonize

